[add]: index page

--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -20,3 +20,13 @@ string.reg.placeholder.email = Email
 string.reg.placeholder.passwordConfirm = Confirm password
 string.password.length = password must contain 8 symbols
 string.have.account = I already have an account
+
+string.home = Home
+string.lang = Language
+string.logout = logout
+string.login = Login
+string.registration = Registration
+string.ukr = Ukrainian
+string.eng = English
+string.variant = Variant №5:
+string.var = Tax Reporting System. Individual / legal entity (hereinafter User) is registered. Submits a report (XML / JSON / Form). Tax Inspector accepts / rejects the report (indicating the reason failure). User can view all submitted reports, reasons refusal and change them if required by the Inspector. User can send a request for a replacement Inspector in case of dissatisfaction.
