--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -21,3 +21,13 @@ string.reg.placeholder.passwordConfirm = Підтвердження паролю
 
 string.password.length = пароль має складатись з 8 сиволів
 string.have.account = В мене вже є аккаунт
+
+string.home = Головна
+string.lang = Мова
+string.logout = вийти
+string.login = Увійти
+string.registration = Зареєструватися
+string.ukr = Українська
+string.eng = Англійська
+string.variant = Варіант №5:
+string.var = Система Подачи Отчетов в Налоговую. Физ./Юр.лицо (далее Пользователь) регистрируется. Подает отчет (XML/JSON/Форма). Налоговый Инспектор принимает/отклоняет отчет (указывая причину отказа). Пользователь может просмотреть все поданные отчеты, причины отказа и изменять их если того потребовал Инспектор. Пользователь может отправлять запрос на замену Инспектора в случае неудовлетворения.
