[add]: finished home user page

--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -30,3 +30,15 @@ string.ukr = Ukrainian
 string.eng = English
 string.variant = Variant №5:
 string.var = Tax Reporting System. Individual / legal entity (hereinafter User) is registered. Submits a report (XML / JSON / Form). Tax Inspector accepts / rejects the report (indicating the reason failure). User can view all submitted reports, reasons refusal and change them if required by the Inspector. User can send a request for a replacement Inspector in case of dissatisfaction.
+
+string.id = id
+string.name = Name
+string.status =Status
+string.created = Created
+string.updated = Updated
+string.reports.list = Reports List
+string.add = Add new Report
+
+string.accepted = Accepted
+string.not.accepted = Not Accepted
+string.queue = Queue
