--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -31,3 +31,15 @@ string.ukr = Українська
 string.eng = Англійська
 string.variant = Варіант №5:
 string.var = Система Подачи Отчетов в Налоговую. Физ./Юр.лицо (далее Пользователь) регистрируется. Подает отчет (XML/JSON/Форма). Налоговый Инспектор принимает/отклоняет отчет (указывая причину отказа). Пользователь может просмотреть все поданные отчеты, причины отказа и изменять их если того потребовал Инспектор. Пользователь может отправлять запрос на замену Инспектора в случае неудовлетворения.
+
+string.id = id
+string.name = Ім'я
+string.status = Статус
+string.created = Створений
+string.updated = Модифікований
+string.reports.list = Список звітів
+string.add = Додати новий Звіт
+
+string.accepted = Прийнято
+string.not.accepted = Відхилено
+string.queue = В черзі
