[add]: adding reports page

--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -42,3 +42,7 @@ string.add = Add new Report
 string.accepted = Accepted
 string.not.accepted = Not Accepted
 string.queue = Queue
+
+string.description= Description
+string.submit = Submit
+string.add.title = Add
