--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -43,3 +43,7 @@ string.add = Додати новий Звіт
 string.accepted = Прийнято
 string.not.accepted = Відхилено
 string.queue = В черзі
+
+string.description= Опис
+string.submit = Підтвердити
+string.add.title = Додати
