[add]: inspector functionality

--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -46,3 +46,10 @@ string.queue = Queue
 string.description= Description
 string.submit = Submit
 string.add.title = Add
+
+string.accept = Accept
+string.decline = Decline
+
+string.add.reason = Add Reason
+string.reason = Reason
+string.decline.reason = Please add decline reason
