--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -47,3 +47,10 @@ string.queue = В черзі
 string.description= Опис
 string.submit = Підтвердити
 string.add.title = Додати
+
+string.accept = Прийняти
+string.decline = Відхилити
+
+string.add.reason = Додати Причину
+string.reason = Причина
+string.decline.reason = Будь ласка вкажіть причину відхилення
