[add]: accounts system tests

--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -53,3 +53,8 @@ string.decline = Decline
 string.add.reason = Add Reason
 string.reason = Reason
 string.decline.reason = Please add decline reason
+string.correct = Correct
+string.replace = Change inspector
+
+string.reason.toggle = Reason :
+string.update.title = Update
