--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -54,3 +54,9 @@ string.decline = Відхилити
 string.add.reason = Додати Причину
 string.reason = Причина
 string.decline.reason = Будь ласка вкажіть причину відхилення
+string.correct = Виправити
+
+string.replace = Змінити інспектора
+
+string.reason.toggle = Причина :
+string.update.title = Оновити
